infra/k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: red-planner
  name: backend-deployment
  labels:
    app: backend
spec:
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      # 1. Ожидание базы данных
      containers:
        - name: backend
          image: red-planner-backend:latest
          imagePullPolicy: IfNotPresent
          # Используем APPLICATION_PORT из конфига, но контейнер должен его слушать
          ports:
            - containerPort: 4200

          # Автоматически подтягиваем ВСЕ переменные из ConfigMap и Secret
          # Это намного чище, чем прописывать каждую переменную вручную
          resources:
            limits:
              cpu: "500m"
              memory: "512Mi"
            requests:
              cpu: "100m"
              memory: "256Mi"
