infra/k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: red-planner
  name: frontend-deployment
spec:
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: red-planner-frontend:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
