infra/k8s/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: red-planner
  name: postgres-service
spec:
  ports:
    - port: 5432
  selector:
    app: postgres
