infra/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: red-planner
  name: red-planner-ingress
  annotations:
    # Удаляем rewrite-target, чтобы /api доходил до бэкенда "как есть"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - host: red-planner.local
      http:
        paths:
          # Весь трафик /api уходит на бэкенд
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 4200
          # Всё остальное уходит на фронтенд
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 3000
